docs/tidy
